<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.view.DashboardActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lovely_beers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lovely_beers_only_for_you"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toStartOf="@id/iv_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_heart"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_margin="@dimen/margin_16"
        android:padding="@dimen/margin_4"
        android:src="@drawable/heart_unselected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/random_card"
        layout="@layout/layout_random_beer_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@id/tv_lovely_beers" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_beers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/beers"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/random_card" />

    <include
        android:id="@+id/filter_view"
        layout="@layout/layout_filter_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_36"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_beers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bears"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_view"
        app:spanCount="2"
        tools:itemCount="7"
        tools:listitem="@layout/layout_beer_list_child_view" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view2"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/shimmer_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/shimmer_background"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view4"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/shimmer_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <View
                android:id="@+id/view5"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/shimmer_background"
                app:layout_constraintStart_toEndOf="@id/view4"
                app:layout_constraintTop_toBottomOf="@id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:id="@+id/no_beer_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_view">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/broken_bottle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/no_beer_found_please_change_the_filter"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>